--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
+    "@comunica/core": "^2.0.1",
+    "@comunica/query-sparql": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-xml2js": "^1.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.32.11",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
