--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.21.4",
+    "axis": "^1.0.0",
+    "deepl": "^1.0.13",
+    "deepl-translator": "^1.2.1",
     "jquery": "^3.6.0",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native-xml2js": "^1.0.3",
