--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.32.11",
+    "serve": "^13.0.2",
     "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
