--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^17.0.2",
     "react-native-xml2js": "^1.0.3",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "sass": "^1.32.11",
     "serve": "^13.0.2",
     "stream": "^0.0.2",
