--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native-xml2js": "^1.0.3",
+    "react-p5": "^1.3.28",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^2.1.3",
     "sass": "^1.32.11",
