configure docker and circle-ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,25 +2,23 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+orbs: 
+  heroku: circleci/heroku@0.0.10
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+jobs: 
+  heroku_deploy:
+    jobs: 
+      -build
+      -heroku/deploy-via-git: # use the pre-configured job, deploy-via-git 
+        -requires: 
+          -build
+        -filters: 
+          -brandches:
+            only: sequential-branch-filter 
+
+jobs:
+  build: 
+    docker:
+      - image: cimg/ruby:2.4-node 
+        auth:
+          usere 
