--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,18 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-
-orbs: 
-  heroku: circleci/heroku@0.0.10
-
-jobs: 
-  heroku_deploy:
-    jobs: 
-      -build
-      -heroku/deploy-via-git: # use the pre-configured job, deploy-via-git 
-        -requires: 
-          -build
-        -filters: 
-          -brandches:
-            only: sequential-branch-filter 
-
 jobs:
-  build: 
-    docker:
-      - image: cimg/ruby:2.4-node 
-        auth:
-          usere 
+  deploy:
+    executor: heroku/default
+    steps:
+      - checkout
+      - heroku/install
+      - run:
+          command: >
+            echo "The command above installs Heroku, the command below deploys.
+            What you do inbetween is up to you!"
+      - heroku/deploy-via-git
+orbs:
+  heroku: circleci/heroku@x.y
+version: 2.1
+workflows:
+  heroku_deploy:
+    jobs:
+      - deploy
