--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spectre",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5001",
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
     "@comunica/core": "^2.0.1",
@@ -20,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-native-xml2js": "^1.0.3",
     "react-p5": "^1.3.28",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^2.1.3",
     "sass": "^1.32.11",
