--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-
 {
   "name": "spectre",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "proxy": "http://localhost:5001",
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
@@ -24,7 +24,7 @@
     "react-p5": "^1.3.28",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "sass": "^1.32.11",
     "serve": "^13.0.2",
     "stream": "^0.0.2",
