--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "spectre",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
-  "proxy": "http://localhost:5001",
+  "homepage": "https://modelsfromthepastforthefuture.herokuapp.com/",
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
     "@comunica/core": "^2.0.1",
@@ -24,7 +23,7 @@
     "react-p5": "^1.3.28",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "^5.0.1",
     "sass": "^1.32.11",
     "serve": "^13.0.2",
     "stream": "^0.0.2",
