--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@comunica/core": "^2.0.1",
     "@comunica/query-sparql": "^2.2.1",
+    "@react-spring/web": "^9.4.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@use-gesture/react": "^10.2.14",
     "axios": "^0.26.1",
     "axis": "^1.0.0",
     "deepl": "^1.0.13",
