--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
-    "dev": "npm start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
