--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "os-browserify": "^0.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-sheets": "^0.4.0",
     "react-native-xml2js": "^1.0.3",
     "react-p5": "^1.3.28",
     "react-responsive": "^9.0.0-beta.6",
@@ -29,6 +30,7 @@
     "sass": "^1.32.11",
     "serve": "^13.0.2",
     "stream": "^0.0.2",
+    "use-google-sheets": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
