--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://modelsfromthepastforthefuture.herokuapp.com/",
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.1",
     "@comunica/core": "^2.0.1",
     "@comunica/query-sparql": "^2.2.1",
     "@react-spring/web": "^9.4.5",
@@ -21,7 +22,6 @@
     "os-browserify": "^0.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-google-sheets": "^0.4.0",
     "react-native-xml2js": "^1.0.3",
     "react-p5": "^1.3.28",
     "react-responsive": "^9.0.0-beta.6",
