__MUTATE__ update package-lock.json

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "npm start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -54,9 +53,7 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 firefox version"
     ]
   },
   "devDependencies": {
