--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axis": "^1.0.0",
     "deepl": "^1.0.13",
     "deepl-translator": "^1.2.1",
+    "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
