--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@comunica/core": "^2.0.1",
     "@comunica/query-sparql": "^2.2.1",
     "@react-spring/web": "^9.4.5",
+    "@react-three/fiber": "^8.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -35,6 +36,7 @@
     "sass": "^1.32.11",
     "serve": "^13.0.2",
     "stream": "^0.0.2",
+    "three": "^0.146.0",
     "use-google-sheets": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
