_MEND_ remove unused packag

--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
   "homepage": "https://modelsfromthepastforthefuture.herokuapp.com/",
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
-    "@react-three/fiber": "^8.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "@use-gesture/react": "^10.2.14",
-    "axios": "^0.26.1",
     "axis": "^1.0.0",
     "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
@@ -22,19 +19,16 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-native-xml2js": "^1.0.3",
-    "react-p5": "^1.3.28",
-    "react-responsive": "^9.0.0-beta.6",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.32.11",
     "serve": "^13.0.2",
     "stream": "^0.0.2",
-    "use-google-sheets": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "npm start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
