--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axis": "^1.0.0",
     "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
+    "node-gyp-build": "^4.6.0",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "react": "^18.0.0",
@@ -29,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "npm start",
+    "dev": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
