--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axis": "^1.0.0",
+    "babel-loader": "^9.1.2",
     "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
     "os": "^0.1.2",
