--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jquery": "^3.6.0",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-native-xml2js": "^1.0.3",
     "react-responsive": "^9.0.2",
@@ -34,7 +34,7 @@
     "start": "serve -s build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
