--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "homepage": "https://modelsfromthepastforthefuture.herokuapp.com/",
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
+    "@supabase/supabase-js": "^2.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axis": "^1.0.0",
     "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
+    "node-cron": "^3.0.2",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "react": "^18.2.0",
