--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
   "scripts": {
     "dev": "react-scripts start",
     "start": "serve -s build",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "react-scripts build"
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
