__GROW__ dereference to subject pages for agents at /index/agent/:id

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-native-xml2js": "^1.0.3",
     "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.32.11",
