--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ node_modules
 
 # misc
 .DS_Store
-.env.local
-.env.local
+.env
+.env
 .env.development.local
 .env.test.local
 .env.production.local
