--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "serve": "^13.0.2",
     "stream": "^0.0.2",
     "tiny-invariant": "^1.3.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "es5-ext": "<=0.10.53"
   },
   "scripts": {
     "dev": "react-scripts start",
