--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
     "@supabase/supabase-js": "^2.8.0",
-    "@tanstack/react-query": "^4.26.1",
+    "@tanstack/react-query": "^4.29.1",
     "@tanstack/react-query-devtools": "^4.27.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
     "axis": "^1.0.0",
     "dotenv": "^10.0.0",
     "edtf-converter": "^4.0.2",
@@ -74,5 +75,6 @@
       "REACT_APP_SUPABASE_ANON_KEY",
       "REACT_APP_SUPABASE_URL"
     ]
-  }
+  },
+  "proxy": "https://p01--admin-cms--qbt6mytl828m.code.run"
 }
