--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
   "react-dotenv": {
     "whitelist": [
       "REACT_APP_SUPABASE_ANON_KEY",
-      "REACT_APP_SUPABASE_URL"
+      "REACT_APP_SUPABASE_URL",
+      "REACT_APP_PAYLOAD_BASE_URL"
     ]
   },
   "proxy": "https://p01--admin-cms--qbt6mytl828m.code.run"
