__MEND__ add proxy

--- a/package.json
+++ b/package.json
@@ -76,5 +76,6 @@
       "REACT_APP_SUPABASE_URL",
       "REACT_APP_PAYLOAD_BASE_URL"
     ]
-  }
+  },
+  "proxy": "https://dmg-programstudios.herokuapp.com/"
 }
