--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "scripts": {
     "dev": "vite start",
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "postinstall": "npm run build",
     "serve-heroku": "vite --host 0.0.0.0 --port 3000 preview",
     "heroku-postbuild": "npm run build",
