--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spectre",
   "version": "0.1.0",
   "engines": {
-    "node": "19.x",
+    "node": "18.x",
     "npm": "9.x"
   },
   "type": "commonjs",
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.3.5",
     "axis": "^1.0.0",
