--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-dotenv": "^0.1.3",
+    "react-helmet-async": "^1.3.0",
     "react-native-xml2js": "^1.0.3",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
