--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "serve": "^13.0.2",
     "stream": "^0.0.2",
     "tiny-invariant": "^1.3.1",
+    "typescript": "^5.0.4",
     "vite": "^4.3.2",
     "vite-plugin-env-compatible": "^1.1.1",
     "vite-plugin-svgr": "^2.4.0",
