__MEND__ clean up code and add types.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "noLib": false,
     "preserveConstEnums": true,
     "suppressImplicitAnyIndexErrors": true,
-    "allowJs": true
+    "allowJs": true,
+    "strict": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "noImplicitReturns": true,
+    "resolveJsonModule": true
   }
 }
