__MUTATE__ update tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
   ],
   "exclude": ["node_modules"],
   "compilerOptions": {
+    "baseUrl": "./src",
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2022",
     "outDir": "public",
     "noEmit": false,
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "sourceMap": true,
     "declaration": true,
     "emitDecoratorMetadata": true,
