--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "homepage": "https://dmg-programstudios.herokuapp.com/",
   "author": "Olivier Van D'huynslager (Design Museum Gent)",
   "dependencies": {
+    "@samvera/clover-iiif": "^1.15.3",
     "@supabase/supabase-js": "^2.21.0",
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.27.0",
@@ -34,6 +35,7 @@
     "react-dom": "^18.0.0",
     "react-dotenv": "^0.1.3",
     "react-helmet-async": "^1.3.0",
+    "react-iiif-vault": "^0.9.21",
     "react-native-xml2js": "^1.0.3",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
@@ -41,8 +43,10 @@
     "sass": "^1.32.11",
     "serve": "^13.0.2",
     "stream": "^0.0.2",
+    "tify": "^0.28.1",
     "tiny-invariant": "^1.3.1",
     "typescript": "^5.0.4",
+    "universalviewer": "^4.0.22",
     "vite": "^4.3.2",
     "vite-plugin-env-compatible": "^1.1.1",
     "vite-plugin-svgr": "^3.2.0",
