--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   ],
   "exclude": ["node_modules"],
   "compilerOptions": {
+    "jsx": "react",
     "baseUrl": "./src",
     "target": "es5",
     "module": "es2022",
